--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,3 @@
-# This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
-
 name: CI Pipeline build RFT Projektmunka
 
 on: [push]
@@ -15,7 +12,7 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-      - name: Build the RFT projektmunka
+      - name: Build RFT projektmunka
         run: mvn compile
-      - name: Run unit tests for the RFT Projektmunka
+      - name: Run unit tests for RFT Projektmunka
         run: mvn test
